# SnakeGameSFML

./: CMakeLists.txt  buildAndRun.sh
include/: Collision.h  Food.h  Snake.h
src/: Collision.cpp  Food.cpp  Snake.cpp  main.cpp
